--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script defer src="index.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
@@ -15,30 +16,55 @@
       <h1><a id="home_button" href="#home">Mark Kholodii</a></h1>
     <!--SCROLLBAR-->
       <nav>
-        <a href="#home">Home</a><a href="#projects">Projects</a> <a href="https://github.com/MarkXtenda">GitHub</a> <a href="https://medium.com/@mark.zapas1">Blog</a> <a href="#contact">Contact</a> <a href="#about">About</a>
+        <a href="#home">Home</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a> 
+        <a href="https://github.com/MarkXtenda">GitHub</a> 
+        <a href="https://medium.com/@mark.zapas1">Blog</a> 
+        <a href="#contact">Contact</a> 
+        <a href="#about">About</a>
       </nav>
     </header>
+    <section id="hero">
+      <h1>Hi, my name is Mark</h1>
+      <p class="intro-text">I am a full-stack software engineer</p>
+      <div>
+        <a href="#home">About me</a>
+        <a href="resume.pdf" download>My Resume</a>
+      </div>
+      
+    </section>
     <!--HOME-->
     <section id="home">
       <div id="intro">
-        <h1>Hi, my name is Mark</h1>
-        <p>Aspiring full-stack software engineer. Recent online course graduate with a focus on HTML/CSS, Javascript, React, SQL, and Ruby on Rails.<br><br>
+        <h1>About me</h1>
+        <p class="intro-text">I am an aspiring full-stack software engineer. Recent online course graduate with a focus on HTML/CSS, Javascript, React, SQL, and Ruby on Rails.<br><br>
           As a graduate full stack engineer, I plan to expand my knowledge and learn in-depth the software and languages commonly used by professionals in the software development industry. 
           Some examples are provided below.</p>
       </div>
       <img id="avatar_img" src="./images/avatar.png" alt="">
 
     </section>
-    <!--LANGUAGES BAR-->
-    <section id="languages">
-      <div class="language_icons"><i class="devicon-html5-plain-wordmark"></i></div>
-      <div class="language_icons"><i class="devicon-css3-plain-wordmark"></i></div>
-      <div class="language_icons"><i class="devicon-javascript-plain"></i></div>
-      <div class="language_icons"><i class="devicon-react-original-wordmark"></i></div>
-      <div class="language_icons"><i class="devicon-github-original-wordmark"></i></div>
-      <div class="language_icons"><i class="devicon-ruby-plain-wordmark"></i></div>
-      <div class="language_icons"><i class="devicon-rails-plain-wordmark"></i></div>
-      <div class="language_icons"><i class="devicon-c-plain"></i></div>
+    <!--SKILLS BAR-->
+    <section id="skills">
+      <h1>Skillset</h1>
+      <div>
+        <div>Front-End Development</div>
+        <div>HTML/CSS, Javascript, TypeScript, React</div>
+        <div>Back-End Development</div>
+        <div>SQL, Ruby, Ruby on Rails</div>
+        <div>Tools</div>
+        <div>Git, Bash, Visual Studio Code</div>
+        <div>...</div>
+        <!-- <div class="language_icons"><i class="devicon-html5-plain-wordmark"></i></div>
+        <div class="language_icons"><i class="devicon-css3-plain-wordmark"></i></div>
+        <div class="language_icons"><i class="devicon-javascript-plain"></i></div>
+        <div class="language_icons"><i class="devicon-react-original-wordmark"></i></div>
+        <div class="language_icons"><i class="devicon-github-original-wordmark"></i></div>
+        <div class="language_icons"><i class="devicon-ruby-plain-wordmark"></i></div>
+        <div class="language_icons"><i class="devicon-rails-plain-wordmark"></i></div>
+        <div class="language_icons"><i class="devicon-c-plain"></i></div> -->
+      </div>
     </section>
     <!--PROJECTS-->
     <section id="projects">
