--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body>
     <!--HEADER-->
     <header>
-      <h3><a id="home_button" href="#hero">Mark Kholodii</a></h3>
+      <h2><a id="home_button" href="#hero">Mark Kholodii</a>
+        <button class="menu-toggle">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
+      </h2>
     <!--SCROLLBAR-->
       <nav>
         <a href="#home">About me</a>
@@ -23,11 +29,6 @@
         <a href="https://medium.com/@mark.zapas1" target="_blank">Blog</a> 
         <a href="#contact">Contact</a> 
       </nav>
-      <button class="menu-toggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </button>
       <div class="menu-overlay">
         <a href="#home">Home</a>
         <a href="#skills">Skills</a>
@@ -65,33 +66,27 @@
         <div class="skillset">
           <div class="language_icons"><i class="devicon-html5-plain-wordmark"></i>HTML</div>
           <div class="language_icons"><i class="devicon-css3-plain-wordmark"></i>CSS</div>
+          <div class="language_icons"><i class="devicon-bootstrap-plain"></i>Bootstrap</div>
           <div class="language_icons"><i class="devicon-javascript-plain"></i>Javascript</div>
           <div class="language_icons"><i class="devicon-typescript-plain"></i>TypeScript</div>
           <div class="language_icons"><i class="devicon-react-original"></i>React</div>
+          <div class="language_icons"><i class="devicon-redux-original"></i>Redux</div>
         </div>
         <h4>Back-End Development</h4>
         <div class="skillset">
+          <div class="language_icons"><i class="devicon-c-plain"></i>C</div>
           <div class="language_icons"><i class="devicon-mysql-plain"></i>MySQL</div>
           <div class="language_icons"><i class="devicon-ruby-plain-wordmark"></i>Ruby</div>
           <div class="language_icons"><i class="devicon-rails-plain-wordmark"></i>Ruby on Rails</div>
-          <div class="language_icons"><i class="devicon-c-plain"></i>C</div>
         </div>
         <h4>Tools</h4>
         <div class="skillset">
           <div class="language_icons"><i class="devicon-bash-plain"></i>Bash</div>
-          <div class="language_icons"><i class="devicon-github-original-wordmark"></i>Git</div>
+          <div class="language_icons"><i class="devicon-git-plain"></i></i>Git</div>
           <div class="language_icons"><i class="devicon-linux-plain"></i>Linux</div>
+          <div class="language_icons"><i class="devicon-slack-plain"></i>Slack</div>
           <div class="language_icons"><i class="devicon-visualstudio-plain"></i>VS Code</div>
         </div>
-        <div>...</div>
-        <!-- <div class="language_icons"><i class="devicon-html5-plain-wordmark"></i></div>
-        <div class="language_icons"><i class="devicon-css3-plain-wordmark"></i></div>
-        <div class="language_icons"><i class="devicon-javascript-plain"></i></div>
-        <div class="language_icons"><i class="devicon-react-original-wordmark"></i></div>
-        <div class="language_icons"><i class="devicon-github-original-wordmark"></i></div>
-        <div class="language_icons"><i class="devicon-ruby-plain-wordmark"></i></div>
-        <div class="language_icons"><i class="devicon-rails-plain-wordmark"></i></div>
-        <div class="language_icons"><i class="devicon-c-plain"></i></div> -->
       </div>
     </section>
     <!--PROJECTS-->
@@ -103,8 +98,8 @@
             <h3>Anime Search</h3>
             <p>simple Anime Search webpage that allows users to search for and view information about various anime shows.</p>
             <div class="demo-code">
-              <a class="click-button" href="https://anime-search-by-mark.netlify.app/">Demo</a>
-              <a class="click-button">Code</a>
+              <a class="click-button" href="https://anime-search-by-mark.netlify.app/" target="_blank">Demo</a>
+              <a class="click-button" target="_blank">Code</a>
             </div>
           </div>
           <div class="projects_examples">
@@ -112,8 +107,8 @@
             <h3>Giphy Clone</h3>
             <p>A simple application that allows users to search and view various GIFs using Giphy.com API.</p>
             <div class="demo-code">
-              <a class="click-button" href="https://giphy-clone-by-mark.netlify.app/">Demo</a>
-              <a class="click-button">Code</a>
+              <a class="click-button" href="https://giphy-clone-by-mark.netlify.app/" target="_blank">Demo</a>
+              <a class="click-button" target="_blank">Code</a>
             </div>
           </div>
           <div class="projects_examples">
@@ -125,6 +120,7 @@
             </div>
           </div>
           <div class="projects_examples">
+            <i class="devicon-react-original-wordmark"></i>
             <i class="devicon-rails-plain-wordmark"></i>
             <h3>InstaClone</h3>
             <p>A clone of the popular social media platform Instagram.</p>
