7. Added feture 'move-up' to slide back to 'hero; section.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <a href="#contact">Contact</a> 
       </div>
     </header>
+    <a id="move-up" class="click-button projects_examples" href="#hero">
+      <span class="arrow"></span>
+    </a>
     <section id="hero">
       <h1>Hi, my name is Mark</h1>
       <p class="intro-text">I am a full-stack software engineer</p>
@@ -45,7 +48,6 @@
         <a class="click-button" href="#home">About me</a>
         <a class="click-button" target="_blank" href="resume.pdf" download>My Resume</a>
       </div>
-      
     </section>
     <!--HOME-->
     <section id="home">
