8. 'Correspondece' section fixed. Form connected to netlify.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="language_icons"><i class="devicon-git-plain"></i></i>Git</div>
           <div class="language_icons"><i class="devicon-linux-plain"></i>Linux</div>
           <div class="language_icons"><i class="devicon-slack-plain"></i>Slack</div>
-          <div class="language_icons"><i class="devicon-visualstudio-plain"></i>VS Code</div>
+          <div class="language_icons"><i class="devicon-npm-original-wordmark"></i>NPM</div>
         </div>
       </div>
     </section>
@@ -134,6 +134,18 @@
     </section>
     <!--CONTACT BAR-->
     <section id="contact">
+      <div id="correspondence">
+        <h3>Correspondence</h3>
+        <form name="contact" method="POST" data-netlify="true">
+          <label for="name">First name:</label><br>
+            <input type="text" name="name"/><br>
+          <label for="email">Email:</label><br>
+            <input type="email" name="email"/><br>
+          <label for="message">Message:</label><br>
+            <textarea name="message"></textarea><br>
+          <button id="submit-button" type="submit">Submit</button>
+        </form>
+      </div>
       <div>
         <h3>Contact</h3>
         <p>
@@ -141,17 +153,6 @@
           <a href="https://www.facebook.com/mark.kholodiy" target="_blank">Facebook</a><br>
           <a href="https://www.linkedin.com/in/mark-kholodii-8333a8266/" target="_blank">LinkedIn</a><br>
         </p>
-      </div>
-      
-      <div>
-        <h3>Correspondence</h3>
-        <form action="">
-          <label for="fname">First name:</label>
-          <input type="text" id="fname" name="fname"><br>
-          <label for="lname">Last name:</label>
-          <input type="text" id="lname" name="lname"><br>
-          <input type="submit" value="Submit">
-        </form>
       </div>
       <div>
         <h3>Follow</h3>
