9. Sections adjustments and fixes.

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     </section>
     <!--CONTACT BAR-->
     <section id="contact">
+      <h1>Correspondence</h1>
       <div id="correspondence">
-        <h3>Correspondence</h3>
         <form name="contact" method="POST" data-netlify="true">
           <label for="name">First name:</label><br>
             <input type="text" name="name"/><br>
@@ -165,9 +165,9 @@
       </div>
     </section>
     <!--FOOTER / ABOUT BAR-->
-    <footer id="about">
+    <section id="about">
     <p>
       Designed & developed by Mark Kholodii
-    </p></footer>
+    </p></section>
   </body>
 </html>
