10. 'footer' section fixed. submit button reworked.

--- a/index.html
+++ b/index.html
@@ -147,22 +147,23 @@
         </form>
       </div>
       <div>
-        <h3>Contact</h3>
+        <h1>Contact</h1>
         <p>
-          <a href="mailto:kholodii.mark@gmail.com">kholodii.mark@gmail.com</a><br>
+          <a href="mailto:kholodii.mark@gmail.com">Email</a><br>
           <a href="https://www.facebook.com/mark.kholodiy" target="_blank">Facebook</a><br>
           <a href="https://www.linkedin.com/in/mark-kholodii-8333a8266/" target="_blank">LinkedIn</a><br>
         </p>
       </div>
-      <div>
+      <!-- Will be added later -->
+      <!-- <div>
         <h3>Follow</h3>
         <p>
           <a href="https://www.youtube.com/" target="_blank">YouTube</a><br>
           <a href="https://www.instagram.com/" target="_blank">Instagram</a><br>
-          <!-- <a href="https://soundcloud.com/mark-kholodii" target="_blank">Soundcloud</a> -->
+          <a href="https://soundcloud.com/mark-kholodii" target="_blank">Soundcloud</a>
           <br>
         </p>
-      </div>
+      </div> -->
     </section>
     <!--FOOTER / ABOUT BAR-->
     <section id="about">
