14.'Project' section update.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="skillset" data-aos="fade-up">
           <div class="language_icons"><i class="devicon-html5-plain-wordmark"></i>HTML</div>
           <div class="language_icons"><i class="devicon-css3-plain-wordmark"></i>CSS</div>
-          <div class="language_icons"><i class="devicon-bootstrap-plain"></i>Bootstrap</div>
+          <!-- <div class="language_icons"><i class="devicon-bootstrap-plain"></i>Bootstrap</div> -->
           <div class="language_icons"><i class="devicon-javascript-plain"></i>Javascript</div>
           <div class="language_icons"><i class="devicon-typescript-plain"></i>TypeScript</div>
           <div class="language_icons"><i class="devicon-react-original"></i>React</div>
@@ -85,9 +85,9 @@
         <h4 data-aos="fade-up">Back-End Development</h4>
         <div class="skillset" data-aos="fade-up">
           <div class="language_icons"><i class="devicon-c-plain"></i>C</div>
-          <div class="language_icons"><i class="devicon-mysql-plain"></i>MySQL</div>
           <div class="language_icons"><i class="devicon-ruby-plain-wordmark"></i>Ruby</div>
           <div class="language_icons"><i class="devicon-rails-plain-wordmark"></i>Ruby on Rails</div>
+          <div class="language_icons"><i class="devicon-mysql-plain"></i>MySQL</div>
         </div>
         <h4 data-aos="fade-up">Tools</h4>
         <div class="skillset" data-aos="fade-up">
@@ -104,27 +104,12 @@
         <h1>Projects I have worked on</h1>
         <menu id="projects_menu">
           <div class="projects_examples" data-aos="fade-up">
-            <i class="devicon-javascript-plain"></i>
-            <h3>Anime Search</h3>
-            <p>simple Anime Search webpage that allows users to search for and view information about various anime shows.</p>
-            <div class="demo-code">
-              <a class="click-button" href="https://anime-search-by-mark.netlify.app/" target="_blank">Demo</a>
-              <a class="click-button" target="_blank">Code</a>
-            </div>
-          </div>
-          <div class="projects_examples" data-aos="fade-up">
             <i class="devicon-react-original-wordmark"></i>
-            <h3>Giphy Clone</h3>
-            <p>A simple application that allows users to search and view various GIFs using Giphy.com API.</p>
-            <div class="demo-code">
-              <a class="click-button" href="https://giphy-clone-by-mark.netlify.app/" target="_blank">Demo</a>
-              <a class="click-button" target="_blank">Code</a>
-            </div>
-          </div>
-          <div class="projects_examples" data-aos="fade-up">
-            <i class="devicon-ruby-plain-wordmark"></i>
-            <h3>DogFacts Ruby Application</h3>
-            <p>This CLI Ruby application fetches 5 random dog facts from the DogFacts API and allows the user to save any of these facts as their favourites for later reading.</p>
+            <i class="devicon-redux-original"></i>
+            <i class="devicon-rails-plain-wordmark"></i>
+            <i class="devicon-mysql-plain-wordmark"></i>
+            <h3>Peer-Portal</h3>
+            <p>A chat application built using Ruby on Rails with the help of ActionCable, ActiveStorage, React, and Redux.</p>
             <div class="demo-code">
               <a class="click-button" href="https://github.com/MarkXtenda/Dog-Facts" target="_blank">Code</a>
             </div>
@@ -132,10 +117,29 @@
           <div class="projects_examples" data-aos="fade-up">
             <i class="devicon-react-original-wordmark"></i>
             <i class="devicon-rails-plain-wordmark"></i>
+            <i class="devicon-mysql-plain-wordmark"></i>
             <h3>InstaClone</h3>
             <p>A clone of the popular social media platform Instagram.</p>
             <div class="demo-code">
               <a class="click-button" href="https://github.com/MarkXtenda/instagram-clone" target="_blank">Code</a>
+            </div>
+          </div>
+          <div class="projects_examples" data-aos="fade-up">
+            <i class="devicon-react-original-wordmark"></i>
+            <h3>GifZone</h3>
+            <p>A simple application that allows users to search and view various GIFs using Giphy.com API.</p>
+            <div class="demo-code">
+              <a class="click-button" href="https://gifZone-by-mark.netlify.app/" target="_blank">Demo</a>
+              <a class="click-button" href="https://github.com/MarkXtenda/GifZone" target="_blank">Code</a>
+            </div>
+          </div>
+          <div class="projects_examples" data-aos="fade-up">
+            <i class="devicon-javascript-plain"></i>
+            <h3>Anime Search</h3>
+            <p>simple Anime Search webpage that allows users to search for and view information about various anime shows.</p>
+            <div class="demo-code">
+              <a class="click-button" href="https://anime-search-by-mark.netlify.app/" target="_blank">Demo</a>
+              <a class="click-button" href="https://github.com/MarkXtenda/animeSearch" target="_blank">Code</a>
             </div>
           </div>
         </menu>
