--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h3>Peer-Portal</h3>
             <p>A chat application built using Ruby on Rails with the help of ActionCable, ActiveStorage, React, and Redux.</p>
             <div class="demo-code">
-              <a class="click-button" href="https://github.com/MarkXtenda/Dog-Facts" target="_blank">Code</a>
+              <a class="click-button" href="https://github.com/MarkXtenda/Dog-Facts" target="_blank">Demo & Code</a>
             </div>
           </div>
           <div class="projects_examples" data-aos="fade-up">
@@ -121,7 +121,7 @@
             <h3>InstaClone</h3>
             <p>A clone of the popular social media platform Instagram.</p>
             <div class="demo-code">
-              <a class="click-button" href="https://github.com/MarkXtenda/instagram-clone" target="_blank">Code</a>
+              <a class="click-button" href="https://github.com/MarkXtenda/instagram-clone" target="_blank">Demo & Code</a>
             </div>
           </div>
           <div class="projects_examples" data-aos="fade-up">
